--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                   </div>
 
                   <p class="testimonial__description">
-                      She has all the skills to thrive in Web Development. She is technically minded and very adaptable. Through her previous job she had to to teamwork and collaboration on a daily basis.
+                      She has all the skills to thrive in Web Development. She is technically minded and very adaptable. Through her previous jobs she had to teamwork and collaboration on a daily basis.
                       We worked together on her business website to start her business, she had no experience in Web Dev, she really impressed me with her critical thinking, creativity, and problem-solving. Her attention to detail was remarkable.
                       To sum up, Pauline is very social and has a positive mindset, she will be a real asset for any tech company.
                   </p>
