logo change to svg + fill: currentColor

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
   <!--==================== HEADER ====================-->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">
-        <img src="assets/img/PR_logo.svg" id="svg" alt="PR Logo" style="width:50px;height:50px;">
+      <a href="#home" class="nav__logo">
+        <svg xmlns="http://www.w3.org/2000/svg" width="375" viewBox="0 0 375 375" style="width:60px;height:60px;" version="1.0">
+          <path d="M 187.382812 337.265625 C 148.582031 337.265625 112.046875 322.164062 84.628906 294.691406 C 57.152344 267.273438 42.050781 230.738281 42.050781 191.933594 C 42.050781 153.132812 57.152344 116.597656 84.628906 89.179688 C 112.046875 61.703125 148.582031 46.601562 187.382812 46.601562 C 226.1875 46.601562 262.722656 61.703125 290.140625 89.179688 C 317.613281 116.652344 332.714844 153.132812 332.714844 191.933594 C 332.714844 230.738281 317.613281 267.273438 290.140625 294.691406 C 262.722656 322.164062 226.1875 337.265625 187.382812 337.265625 Z M 187.382812 55.316406 C 150.90625 55.316406 116.574219 69.546875 90.785156 95.335938 C 64.996094 121.125 50.765625 155.457031 50.765625 191.933594 C 50.765625 228.414062 64.996094 262.742188 90.785156 288.53125 C 116.574219 314.324219 150.90625 328.554688 187.382812 328.554688 C 223.863281 328.554688 258.191406 314.324219 283.980469 288.53125 C 309.773438 262.742188 324.003906 228.414062 324.003906 191.933594 C 324.003906 155.457031 309.773438 121.125 283.980469 95.335938 C 258.191406 69.546875 223.863281 55.316406 187.382812 55.316406 Z M 187.382812 55.316406"/><g><g><g><path d="M 35.097656 -71.835938 L 8.824219 -71.835938 L 8.824219 0 L 19.292969 0 L 19.292969 -23.910156 L 35.097656 -23.910156 C 50.59375 -23.910156 58.390625 -35.816406 58.390625 -47.820312 C 58.390625 -59.828125 50.59375 -71.835938 35.097656 -71.835938 Z M 35.097656 -34.171875 L 19.292969 -34.171875 L 19.292969 -61.367188 L 35.097656 -61.367188 C 43.820312 -61.367188 48.128906 -54.59375 48.128906 -47.71875 C 48.128906 -40.945312 43.820312 -34.171875 35.097656 -34.171875 Z M 35.097656 -34.171875" transform="translate(97.282 227.676)"/></g></g></g><g><g><g><path d="M 34.996094 -36.429688 L 22.886719 -36.429688 L 22.886719 -31.503906 L 49.054688 0 L 62.496094 0 L 39.816406 -26.988281 C 52.132812 -29.144531 58.390625 -38.792969 58.390625 -48.949219 C 58.390625 -60.34375 50.59375 -72.757812 34.996094 -72.757812 L 8.824219 -72.757812 L 8.824219 0 L 19.085938 0 L 19.085938 -62.292969 L 34.996094 -62.292969 C 43.71875 -62.292969 48.027344 -55.109375 48.027344 -48.949219 C 48.027344 -42.691406 43.71875 -36.429688 34.996094 -36.429688 Z M 34.996094 -36.429688" transform="translate(216.811 227.676)"/></g></g></g><path transform="matrix(0 -9.7441 10.11111 0 187.491 250.21)" fill="currentColor" d="M -0.0000988013 0.0000885473 L 11.930592 0.0000885473" stroke="#000"/>
+          <use fill="currentColor"/>
+        </svg>
       </a>
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list grid">
@@ -379,7 +382,7 @@
                     </div>
 
                     <div>
-                        <h3 class="qualification__title"> Web Developer Bootcamp</h3>
+                        <h3 class="qualification__title">Full Stack Web Development Bootcamp</h3>
                         <span class="qualification__subtitle">Le wagon Australia</span>
                         <div class="qualification__calendar">
                             <i class="uil uil-calendar-alt"></i>
@@ -412,7 +415,7 @@
                 <!--=============================== WORK 1 ===========================-->
                 <div class="qualification__data">
                     <div>
-                        <h3 class="qualification__title">Full-Stack Developer</h3>
+                        <h3 class="qualification__title">Full Stack Developer</h3>
                         <span class="qualification__subtitle">
                             <a href="https://www.cogini.com/" target="_blank">Cogini</a> - Taiwan
                         </span>
