added stack to porfolio

--- a/index.html
+++ b/index.html
@@ -487,7 +487,10 @@
           <div class="portfolio__data">
             <h3 class="portfolio__title">AusHello [desktop only]</h3>
             <p class="portfolio__description">
-              Location based directory to connect refugees to find local resources in communities around Australia
+              Location based directory to connect refugees to find local resources in communities around Australia.
+              <br>
+              <br>
+              <strong>Stack:</strong> Ruby on Rails, HTML, CSS, JavaScript, PostgreSQL
             </p>
             <a href="https://www.aushello.com/" target="_blank" class="button button--flex button--small portfolio__button">
               Demo
@@ -507,7 +510,10 @@
           <div class="portfolio__data">
             <h3 class="portfolio__title">Private Kitchen</h3>
             <p class="portfolio__description">
-                Platform designed to connect chefs with individual that can book private meals at home
+                Platform designed to connect chefs with individual that can book private meals at home.
+                <br>
+                <br>
+                <strong>Stack:</strong> Ruby on Rails, HTML, CSS, JavaScript, Bootstrap, PostgreSQL
             </p>
             <a href="http://privatekitchen.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
               Demo
