4th project added

--- a/index.html
+++ b/index.html
@@ -527,6 +527,30 @@
           </div>
         </div>
 
+        <!--======================== PORTFOLIO 4 =============-->
+        <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/portfolio4.png" alt="" class="portfolio__img">
+    
+            <div class="portfolio__data">
+                <h3 class="portfolio__title">Private Kitchen</h3>
+                <p class="portfolio__description">
+                    Manage all the films you have seen, add them in lists and create bookmarks.
+                    <br>
+                    <br>
+                    <strong>Stack:</strong> Ruby on Rails, HTML, CSS, JavaScript, Bootstrap, PostgreSQL, Tmdb-api
+                </p>
+                <a href="https://amazingwatchlist.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
+                Demo
+                <i class="uil uil-arrow-right button__icon"></i>
+                </a>
+                <a href="https://github.com/PaulineTW/rails-watch-list" target="_blank" class="button button--flex button--small portfolio__button">
+                Code
+                <i class="uil uil-github button__icon"></i>
+                </a>
+    
+            </div>
+            </div>
+
         <!--=============== PORTFOLIO 3 ===============-->
         <div class="portfolio__content grid swiper-slide">
           <img src="assets/img/portfolio3.png" alt="" class="portfolio__img">
