correct tittle 4th project

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
             <img src="assets/img/portfolio4.png" alt="" class="portfolio__img">
     
             <div class="portfolio__data">
-                <h3 class="portfolio__title">Private Kitchen</h3>
+                <h3 class="portfolio__title">Watch List</h3>
                 <p class="portfolio__description">
                     Manage all the films you have seen, add them in lists and create bookmarks.
                     <br>
