added stack to project2

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
               Location based directory to connect refugees to find local resources in communities around Australia.
               <br>
               <br>
-              <strong>Stack:</strong> Ruby on Rails, HTML, CSS, JavaScript, PostgreSQL, Mapbox API
+              <strong>Stack:</strong> Ruby on Rails, HTML, CSS, JavaScript, PostgreSQL, Mapbox API, I18n API
             </p>
             <a href="https://www.aushello.com/" target="_blank" class="button button--flex button--small portfolio__button">
               Demo
