--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="home__data">
             <h1 class="home__title">Bonjour, I'm Pauline !</h1>
             <br>
-            <h3 class="home__subtitle">Full-Stack Developer</h3>
+            <h3 class="home__subtitle">Junior Full Stack Developer</h3>
             <p class="home__description">I enjoy turning complex problems into simple, beautiful and intuitive apps. When I'm not coding, you'll find me cooking, hiking or wild camping with my van.
             </p>
             <a href="#contact" class="button button--flex">
