added project to portfolio

--- a/index.html
+++ b/index.html
@@ -480,6 +480,29 @@
 
     <div class="portfolio__container container swiper-container">
       <div class="swiper-wrapper">
+        
+        <div class="portfolio__content grid swiper-slide">
+            <img src="assets/img/portfolio0.png" alt="" class="portfolio__img">
+  
+            <div class="portfolio__data">
+              <h3 class="portfolio__title">Chair Shop</h3>
+              <p class="portfolio__description">
+                Business static landing page using Minimalist Design
+                <br>
+                <br>
+                <strong>Stack:</strong> HTML, CSS
+              </p>
+              <a href="https://design-chair-shop.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+                Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+              <a href="https://github.com/PaulineTW/design-chair-shop" target="_blank" class="button button--flex button--small portfolio__button">
+                Code
+                <i class="uil uil-github button__icon"></i>
+              </a>
+            </div>
+          </div>
+
         <!--======================== PORTFOLIO 1 =============-->
         <div class="portfolio__content grid swiper-slide">
           <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
