Added netlify form function

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                 </div>
             </div>
 
-            <form name="contact"
+            <form name="contact" netlify
             method="POST"
             enctype="multipart/form-data"
             name="EmailForm"
