--- a/index.html
+++ b/index.html
@@ -770,20 +770,20 @@
                 <div class="contact__inputs grid">
                     <div class="contact__content">
                         <label for="" class="contact__label">Name</label>
-                        <input type="text" class="contact__input">
+                        <input type="text" name="name" class="contact__input">
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Email</label>
-                        <input type="email" class="contact__input">
+                        <input type="email" name="email" class="contact__input">
                     </div>
                 </div>
                 <div class="contact__content">
                     <label for="" class="contact__label">Project</label>
-                    <input type="text" class="contact__input">
+                    <input type="text" name="project" class="contact__input">
                 </div>
                 <div class="contact__content">
                     <label for="" class="contact__label">Message</label>
-                    <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                    <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
                 </div>
 
                 <div>
