Added project 6 and 7

--- a/index.html
+++ b/index.html
@@ -473,17 +473,15 @@
         </div>
     </section>
 
-  <!--==================== PORTFOLIO ====================-->
+  <!--==================== PROJECTS ====================-->
   <section class="portfolio section" id="portfolio">
     <h2 class="section__title">Portfolio</h2>
     <span class="section__subtitle">Most Recent Project</span>
 
     <div class="portfolio__container container swiper-container">
       <div class="swiper-wrapper">
-
         <div class="portfolio__content grid swiper-slide">
             <img src="assets/img/portfolio0.png" alt="" class="portfolio__img">
-
             <div class="portfolio__data">
               <h3 class="portfolio__title">Chair Shop</h3>
               <p class="portfolio__description">
@@ -506,7 +504,6 @@
         <!--======================== PROJECT 1 =============-->
         <div class="portfolio__content grid swiper-slide">
           <img src="assets/img/portfolio1.png" alt="" class="portfolio__img">
-
           <div class="portfolio__data">
             <h3 class="portfolio__title">AusHello [desktop only]</h3>
             <p class="portfolio__description">
@@ -529,7 +526,6 @@
         <!--======================== PROJECT 2 =============-->
         <div class="portfolio__content grid swiper-slide">
           <img src="assets/img/portfolio2.png" alt="" class="portfolio__img">
-
           <div class="portfolio__data">
             <h3 class="portfolio__title">Private Kitchen</h3>
             <p class="portfolio__description">
@@ -546,71 +542,108 @@
               Code
               <i class="uil uil-github button__icon"></i>
             </a>
-
           </div>
         </div>
 
         <!--======================== PROJECT 4 =============-->
         <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio4.png" alt="" class="portfolio__img">
+          <img src="assets/img/portfolio4.png" alt="" class="portfolio__img">
+          <div class="portfolio__data">
+            <h3 class="portfolio__title">Watch List</h3>
+            <p class="portfolio__description">
+                Manage all the films you have seen, add them in lists and create bookmarks.
+                <br>
+                <br>
+                <strong>Stack:</strong> Ruby on Rails, HTML, CSS, JavaScript, Bootstrap, PostgreSQL, Tmdb-api
+            </p>
+            <a href="https://amazingwatchlist.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
+            Demo
+            <i class="uil uil-arrow-right button__icon"></i>
+            </a>
+            <a href="https://github.com/PaulineTW/rails-watch-list" target="_blank" class="button button--flex button--small portfolio__button">
+            Code
+            <i class="uil uil-github button__icon"></i>
+            </a>
+          </div>
+        </div>
 
-            <div class="portfolio__data">
-                <h3 class="portfolio__title">Watch List</h3>
-                <p class="portfolio__description">
-                    Manage all the films you have seen, add them in lists and create bookmarks.
-                    <br>
-                    <br>
-                    <strong>Stack:</strong> Ruby on Rails, HTML, CSS, JavaScript, Bootstrap, PostgreSQL, Tmdb-api
-                </p>
-                <a href="https://amazingwatchlist.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
-                Demo
-                <i class="uil uil-arrow-right button__icon"></i>
-                </a>
-                <a href="https://github.com/PaulineTW/rails-watch-list" target="_blank" class="button button--flex button--small portfolio__button">
-                Code
-                <i class="uil uil-github button__icon"></i>
-                </a>
-
-            </div>
-            </div>
-
-                    <!--======================== PROJECT 5 =============-->
+        <!--======================== PROJECT 5 =============-->
         <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio5.png" alt="" class="portfolio__img">
+          <img src="assets/img/portfolio5.png" alt="" class="portfolio__img">
+          <div class="portfolio__data">
+            <h3 class="portfolio__title">Doors Delights</h3>
+            <p class="portfolio__description">
+                A healthy meal delivered to your door, every single day
+                <br>
+                <br>
+                <strong>Stack:</strong> HTML, CSS, JavaScript
+            </p>
+            <a href="https://door-delights.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+            Demo
+            <i class="uil uil-arrow-right button__icon"></i>
+            </a>
+            <a href="https://github.com/PaulineTW/door-delights" target="_blank" class="button button--flex button--small portfolio__button">
+            Code
+            <i class="uil uil-github button__icon"></i>
+            </a>
+          </div>
+        </div>
 
-            <div class="portfolio__data">
-                <h3 class="portfolio__title">Doors Delights</h3>
-                <p class="portfolio__description">
-                    A healthy meal delivered to your door, every single day
-                    <br>
-                    <br>
-                    <strong>Stack:</strong> HTML, CSS, JavaScript
-                </p>
-                <a href="https://door-delights.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
-                Demo
-                <i class="uil uil-arrow-right button__icon"></i>
-                </a>
-                <a href="https://github.com/PaulineTW/door-delights" target="_blank" class="button button--flex button--small portfolio__button">
-                Code
-                <i class="uil uil-github button__icon"></i>
-                </a>
+        <!--======================== PROJECT 6 =============-->
+        <div class="portfolio__content grid swiper-slide">
+          <img src="assets/img/portfolio6.png" alt="" class="portfolio__img">
+          <div class="portfolio__data">
+            <h3 class="portfolio__title">Guess My Number!</h3>
+            <p class="portfolio__description">
+                This game is built using HTML5, CSS3, ES6. In this game, the player has to guess the number. Initially, every player will be given 20 points. For every wrong answer score of the player will be deducted.
+                <br>
+                <br>
+                <strong>Stack:</strong> HTML, CSS, JavaScript, DOM Manipulation
+            </p>
+            <a href="https://my-number-guessing.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+            Demo
+            <i class="uil uil-arrow-right button__icon"></i>
+            </a>
+            <a href="https://github.com/PaulineTW/guess-my-number" target="_blank" class="button button--flex button--small portfolio__button">
+            Code
+            <i class="uil uil-github button__icon"></i>
+            </a>
+          </div>
+        </div>
 
-            </div>
-            </div>
-
+        <!--======================== PROJECT 7 =============-->
+        <div class="portfolio__content grid swiper-slide">
+          <img src="assets/img/portfolio7.png" alt="" class="portfolio__img">
+          <div class="portfolio__data">
+            <h3 class="portfolio__title">Famous pig game</h3>
+            <p class="portfolio__description">
+                A simple dice game with two players. Each player repeatedly rolls a dice until either a 1 is rolled or the player decides to "hold". The player who first scores 100 or more points wins.
+                <br>
+                <br>
+                <strong>Stack:</strong> HTML, CSS, JavaScript, DOM Manipulation
+            </p>
+            <a href="https://famous-pig-game.netlify.app/" target="_blank" class="button button--flex button--small portfolio__button">
+            Demo
+            <i class="uil uil-arrow-right button__icon"></i>
+            </a>
+            <a href="https://github.com/PaulineTW/famous-pig-game" target="_blank" class="button button--flex button--small portfolio__button">
+            Code
+            <i class="uil uil-github button__icon"></i>
+            </a>
+          </div>
+        </div>
 
         <!--=============== PROJECT 3 ===============-->
-            <div class="portfolio__content grid swiper-slide">
-            <img src="assets/img/portfolio32.png" alt="" class="portfolio__img">
-
-            <div class="portfolio__data">
-                <h3 class="portfolio__title">Taiwan Camps [under construction]</h3>
-                <p class="portfolio__description">Taiwan campsite platform where users can search all camping information and be part of campers’ community</p>
-                <a href="#" class="button button--flex button--small portfolio__button">
-                    Demo
-                    <i class="uil uil-arrow-right button__icon"></i>
-                </a>
-            </div>
+        <div class="portfolio__content grid swiper-slide">
+          <img src="assets/img/portfolio32.png" alt="" class="portfolio__img">
+          <div class="portfolio__data">
+              <h3 class="portfolio__title">Taiwan Camps [under construction]</h3>
+              <p class="portfolio__description">Taiwan campsite platform where users can search all camping information and be part of campers’ community</p>
+              <a href="#" class="button button--flex button--small portfolio__button">
+                  Demo
+                  <i class="uil uil-arrow-right button__icon"></i>
+              </a>
+          </div>
         </div>
     </div>
 
