--- a/index.html
+++ b/index.html
@@ -633,6 +633,28 @@
           </div>
         </div>
 
+         <!--======================== PROJECT 8 =============-->
+        <div class="portfolio__content grid swiper-slide">
+          <img src="assets/img/portfolio8.png" alt="" class="portfolio__img">
+          <div class="portfolio__data">
+            <h3 class="portfolio__title">Quote editor</h3>
+            <p class="portfolio__description">
+                Single-page quote editor without having to write a single line of custom JavaScript thanks to Turbo drive, Turbo Frames and Turbo Streams.
+                <br>
+                <br>
+                <strong>Stack:</strong> Ruby on Rails, HTML, CSS, Turbo drive, Stimulus, Devise, PostgreSQL, Capybara and Selenium
+            </p>
+            <a href="https://awesome-quote-editor.herokuapp.com/" target="_blank" class="button button--flex button--small portfolio__button">
+            Demo
+            <i class="uil uil-arrow-right button__icon"></i>
+            </a>
+            <a href="https://github.com/PaulineTW/quote-editor" target="_blank" class="button button--flex button--small portfolio__button">
+            Code
+            <i class="uil uil-github button__icon"></i>
+            </a>
+          </div>
+        </div>
+
         <!--=============== PROJECT 3 ===============-->
         <div class="portfolio__content grid swiper-slide">
           <img src="assets/img/portfolio32.png" alt="" class="portfolio__img">
