Added background tab in navbar

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             </a>
           </li>
           <li class="nav__item">
+            <a href="#background" class="nav__link">
+              <i class="uil uil-file-alt nav__icon"></i> Background
+            </a>
+          </li>
+          <li class="nav__item">
             <a href="#portfolio" class="nav__link">
               <i class="uil uil-briefcase-alt nav__icon"></i> Portfolio
             </a>
@@ -347,7 +352,7 @@
         </div>
     </section>
     <!--==================== QUALIFICATION ====================-->
-    <section class="qualification section">
+    <section class="qualification section" id="background">
         <h2 class="section__title">Background</h2>
         <div class="section__subtitle">My personal journey</div>
 
