Fix form button and add Submit HTML forms with AJAX

--- a/index.html
+++ b/index.html
@@ -817,8 +817,9 @@
                 </div>
             </div>
 
-            <form name="contact" netlify
+            <!-- <form name="contact"
             method="POST"
+            data-netlify="true"
             enctype="multipart/form-data"
             name="EmailForm"
             class="contact__form grid">
@@ -848,8 +849,36 @@
                     <i class="uil uil-message button__icon"></i>
                     </a>
                 </button>
+                <button type="submit" class="button button--flex" style="border: hidden;">
+                    Send Message
+                    <i class="uil uil-message button__icon"></i>
+                </button>
                 </div>
-            </form>
+            </form> -->
+
+          <form
+          name="contact"
+          method="POST"
+          data-netlify="true"
+          class="contact__form grid">
+            <div class="contact__inputs grid">
+              <div class="contact__content">
+                <label class="contact__label">Name <input type="text" name="name" class="contact__input" /></label>
+              </div>
+              <div class="contact__content">
+                <label class="contact__label">Email <input type="email" name="email" class="contact__input" /></label>
+              </div>
+            </div>
+
+            <div class="contact__content">
+              <label class="contact__label">Message <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea></label>
+            </div>
+
+            <div>
+              <button type="submit" class="button button--flex">Send message<i class="uil uil-message button__icon"></i></button>
+            </div>
+          </form>
+
         </div>
 
     </section>
