Adding action to contact form

--- a/index.html
+++ b/index.html
@@ -821,7 +821,8 @@
           name="contact"
           method="POST"
           data-netlify="true"
-          class="contact__form grid">
+          class="contact__form grid"
+          action="/">
             <div class="contact__inputs grid">
               <div class="contact__content">
                 <label class="contact__label">Name <input type="text" name="name" class="contact__input" /></label>
